# dxil2spirv

./: .gitmodules  CMakeLists.txt  CMakeTargets.cmake  License.txt
include/: dxil2spirv.h
src/: CMakeLists.txt  dxil2spirv.cpp  dxil2spirv_internal.h  dxil2spirv_optimize.cpp  dxil2spirv_options.c  dxil2spirv_test.cpp  main.cpp
src/DXIL-Translator/: FucntionTranslator.cpp  ResourceTranslator.cpp  Translator.cpp  Translator.h  TypeTranslator.cpp
src/SPIRV-Builder/: Block.cpp  Block.h  Function.cpp  Function.h  Handle.hpp  Inst.cpp  Inst.h  Module.cpp  Module.h
test/: compile_all.py  types_test.hlsl
